--- a/classes.html
+++ b/classes.html
@@ -3,7 +3,7 @@
       <html>
         <head>
           <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-          <link href="css/styles.css" rel="stylesheet" type="text/css">
+          <link href="css/style.css" rel="stylesheet" type="text/css">
           <script src="js/jquery.min.js"></script>
           <script src="js/scripts.js"></script>
           <title>Colors</title>
